# Shield-Wallet-for-Solana-OKX-DEX

./: .gitignore  README.md
contracts/: README.md  hardhat.config.ts  package.json
contracts/contracts/: DefaultCallbackHandler.sol  ShieldWalletFactory.sol
contracts/contracts/interfaces/: IShieldWallet.sol
contracts/contracts/wallet/: CheckedExecutor.sol  FallbackManager.sol  OnlySelf.sol  OwnersManager.sol  ProposerManager.sol  ShieldWallet.sol  Timelock.sol
contracts/tasks/: index.ts
contracts/test/: ShieldWallet.ts
front-end/: package-lock.json  package.json  tailwind.config.ts  transaction-modal.tsx
front-end/app/: globals.css  layout.tsx  page.tsx
front-end/app/api/shieldwallet/: route.ts
front-end/app/home/[shieldWalletAccount]/: page.tsx
front-end/app/lib/: db.ts
front-end/app/lib/models/: MetaTx.ts  (+1 more)
front-end/app/new-account/: page.tsx
front-end/components/: HeroComp.tsx  ModalAccountsAvalaible.tsx  NavBarMain.tsx  NavBarMainCropped.tsx  addSignatureToMetaTx.tsx  coders-comp.tsx  features.tsx  get-started-section.tsx  home-dashboard.tsx  secondFormCreation.tsx  sendTxModal.tsx  wallet-sidebar.tsx
front-end/context/: providers.tsx
front-end/lib/abis/: addressConstants.ts  factoryAbi.ts  shieldWalletAbi.ts
front-end/lib/scripts/: deployShieldWallet.ts  execExecution.ts  propExecution.ts
solana_contracts/: Anchor.toml  Cargo.toml  README.md  okx-integration-demo.ts
solana_contracts/programs/shield_wallet_solana/: Cargo.toml
solana_contracts/programs/shield_wallet_solana/src/: lib.rs
solana_contracts/tests/: shield-wallet.ts
(+4 files in other folders)
