[package]
name = "shield_wallet_solana"
version = "0.1.0"
description = "Shield Wallet implementation on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "shield_wallet_solana"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.1"
